@@ -4,9 +4,8 @@
  */
 package com.ssnagin.lab5java.sem2.lab5.commands.commands;
 
-import com.ssnagin.lab5java.sem2.lab5.Core;
-import com.ssnagin.lab5java.sem2.lab5.reflection.Reflections;
 import com.ssnagin.lab5java.sem2.lab5.ApplicationStatus;
+import com.ssnagin.lab5java.sem2.lab5.Core;
 import com.ssnagin.lab5java.sem2.lab5.collection.CollectionManager;
 import com.ssnagin.lab5java.sem2.lab5.collection.model.MusicBand;
 import com.ssnagin.lab5java.sem2.lab5.collection.wrappers.LocalDateWrapper;
@@ -14,25 +13,26 @@ import com.ssnagin.lab5java.sem2.lab5.commands.Command;
 import com.ssnagin.lab5java.sem2.lab5.console.Console;
 import com.ssnagin.lab5java.sem2.lab5.console.ParsedString;
 import com.ssnagin.lab5java.sem2.lab5.description.DescriptionParser;
+import com.ssnagin.lab5java.sem2.lab5.reflection.Reflections;
 import com.ssnagin.lab5java.sem2.lab5.validation.TempValidator;
 
 import java.lang.reflect.InvocationTargetException;
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Scanner;
 
 /**
- * Shows brief description about available commands
+ * Throws when other commands does not exist. The only one unregistered command!
  * 
  * @author developer
  */
-public class CommandAdd extends Command {
-    
+public class CommandRemoveLower extends Command {
+
     private CollectionManager collectionManager;
     private Scanner scanner;
-    
-    public CommandAdd(String name, String description, CollectionManager collectionManager, Scanner scanner) {
+
+
+    public CommandRemoveLower(String name, String description, CollectionManager collectionManager, Scanner scanner) {
         super(name, description);
 
         this.collectionManager = collectionManager;
@@ -41,17 +41,18 @@ public class CommandAdd extends Command {
 
     @Override
     public ApplicationStatus executeCommand(ParsedString parsedString) {
+
         this.scanner = Core.getInstance().getCurrentScanner();
 
         if (!parsedString.getArguments().isEmpty()) {
-            if ("h".equals(parsedString.getArguments().getFirst()))
+            if (" h".equals(parsedString.getArguments().get(0)))
                 return this.showUsage(parsedString);
         }
-        
+
         Console.separatePrint("Please, fill in the form with your values:", this.getName().toUpperCase());
-        
+
         try {
-            
+
             MusicBand musicBand = Reflections.parseModel(MusicBand.class, scanner);
 
             if (musicBand == null) return ApplicationStatus.RUNNING;
@@ -59,7 +60,7 @@ public class CommandAdd extends Command {
             var result = new LocalDateWrapper(
                     musicBand
             );
-            
+
             // Final validation here;
             List<String> errors = TempValidator.validateMusicBand(musicBand);
 
@@ -69,23 +70,22 @@ public class CommandAdd extends Command {
                 }
                 return ApplicationStatus.RUNNING;
             }
-            
-            // Adding into CollectionManager with Creation Date:
-            this.collectionManager.addElement(result);
-            
-            Console.separatePrint("Successfully added!", "SUCCESS");
-        } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
+
+            // remove all elements that are lower than created:
+            Console.separatePrint(this.collectionManager.removeLower(musicBand), "REMOVED");
+        } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | IllegalArgumentException |
+                 InvocationTargetException ex) {
             Console.error(ex.toString());
         }
-        
+
         return ApplicationStatus.RUNNING;
     }
-    
+
     @Override
     public ApplicationStatus showUsage(ParsedString parsedString) {
-        Console.println("Usage: add\nСписок того, что надо ввести:");
+        Console.println("Usage: remove_lower\nСписок того, что надо ввести:");
         Console.println(DescriptionParser.getRecursedDescription(MusicBand.class, new HashMap<>()));
-        
+
         return ApplicationStatus.RUNNING;
     }
 }
